--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="container">
-      <img class="cat-img" src="https://mail.google.com/mail/u/0?ui=2&ik=7e1fcdfe5b&attid=0.7&permmsgid=msg-f:1790720905296051135&th=18d9eb2cfc097bbf&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-V5neUMRlzV1b8aZ71WBtQcNukZ9f2QwJmlr28Yv-_HA6xaeuB0WU8H1FT850LuEHyK3RQLGs3AAZhaVZtpJ4Oc4GRw0Ba5oveZ3cado9tEF7xpri8eEqBhMU&disp=emb&realattid=18d9eb05e945f233ef15" alt="Picture of a cat" />
+      <img class="cat-img" src="cat-0.jpg" alt="Picture of a cat" />
       <p class="title">Kieres ser mi san valentin(x siempre)?</p>
       <div class="buttons">
         <button type="button" class="btn btn--yes">obvio bb</button>
